microk8s/repos/quality-gates-hot/carts/manifest/carts.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      service: carts
      app: carts
  template:
    metadata:
      labels:
        service: carts
        app: carts
        version: v1
    spec:
      containers:
      - name: carts
        image: dynatracesockshop/carts:0.6.0
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 400m
            memory: 768Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 15
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    app: carts
  namespace: dev
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: carts
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: carts
  name: carts
  namespace: dev
spec:
  rules:
  - host: carts.dev.192.168.50.10.nip.io
    http:
      paths:
      - backend:
          serviceName: carts
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
